<resources>
    <string name="app_name">Namma Matrimony</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">288926668416344</string>
    <string name="fb_login_protocol_scheme">fb288926668416344</string>
    <string name="password">Password</string>
    <string name="lastname">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email ID</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="no_internet">No Internet Connected</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="internal_server_error">Internal server error</string>
    <string name="logout_confirm_message">Are you sure want to logout?</string>
    <string name="close_app_message">Are you sure want to exit?</string>
    <string name="logout">Logout</string>
    <string name="action_search">Search</string>
    <string name="title_activity_login">Sign in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_with">Login with</string>
    <string name="not_a_member">Not a member?</string>
    <string name="username">Username</string>
    <string name="signup_using">Signup using</string>
    <string name="title_activity_photos">PhotosActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_post">Add Post</string>
    <string name="description">Description</string>
    <string name="users">Post</string>
    <string name="edit">edit</string>
    <string name="update">Continue</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="save_and_contniue">Save and continue</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="news_feeds">News Feeds</string>
    <string name="events">Events</string>
    <string name="search">Search</string>
    <string name="leader_dashboard">Leader Dashboard</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="approve">Approve</string>
    <string name="paytm_transaction_id">PayTM Transaction Number</string>
    <string name="free">Free</string>
    <string name="paid">Paid</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_maps">Map</string>
    <string name="send_otp">Send OTP</string>
    <string name="reset">Reset</string>
    <string name="login_via_otp">Login via OTP</string>
    <string name="email_hint">E-Mail</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="dob_hint">Date of Birth - dd/mm/yyyy</string>
    <string name="signup_agreement">I have read and agree to the</string>
    <string name="terms_and_conditions">By submiting you agree to our </string>
    <string name="terms_and_conditions1">Privacy Policy and T&amp;C </string>
    <string name="already_a_member">Already a member</string>
    <string name="profile_select_hint">Profile Created by</string>
    <string name="religion_select_hint">Select a Religion</string>
    <string name="dob_insufficient">Please select a DOB before 16 years</string>
    <string name="about_myself">About Myself</string>
    <string name="about_myself_hint">About Myself...</string>
    <string name="no_of_children">No of children</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string-array name="height">
        <item>Select a Height</item>
        <item>0ft 0in</item>
        <item>Below 4ft</item>
        <item>4ft 06in</item>
        <item>4ft 07in</item>
        <item>4ft 08in</item>
        <item>4ft 09in</item>
        <item>4ft 10in</item>
        <item>4ft 11in</item>
        <item>5ft</item>
        <item>5ft 01in</item>
        <item>5ft 02in</item>
        <item>5ft 03in</item>
        <item>5ft 04in</item>
        <item>5ft 05in</item>
        <item>5ft 06in</item>
        <item>5ft 07in</item>
        <item>5ft 08in</item>
        <item>5ft 09in</item>
        <item>5ft 10in</item>
        <item>5ft 11in</item>
        <item>6ft</item>
        <item>6ft 01in</item>
        <item>6ft 02in</item>
        <item>6ft 03in</item>
        <item>6ft 04in</item>
        <item>6ft 05in</item>
        <item>6ft 06in</item>
        <item>6ft 07in</item>
        <item>6ft 08in</item>
        <item>6ft 09in</item>
        <item>6ft 10in</item>
        <item>6ft 11in</item>
        <item>7ft</item>
        <item>Above 7ft</item>
    </string-array>
    <string-array name="weight">
        <item>Select a Weight</item>
        <item>40 Kg</item>
        <item> 41 Kg</item>
        <item> 42 kg</item>
        <item> 43 kg </item>
        <item> 44 kg </item>
        <item> 45 kg </item>
        <item> 46 kg </item>
        <item> 47 kg </item>
        <item> 48 kg </item>
        <item> 49 kg </item>
        <item> 50 kg </item>
        <item> 51 kg </item>
        <item> 52 kg </item>
        <item> 53 kg </item>
        <item> 54 kg </item>
        <item> 55 kg </item>
        <item> 56 kg </item>
        <item> 57 kg </item>
        <item>58 kg</item>
        <item>59 kg </item>
        <item> 60 kg </item>
        <item> 61 kg </item>
        <item> 62 kg </item>
        <item> 63 kg </item>
        <item> 64 kg </item>
        <item> 65 kg </item>
        <item> 66 kg </item>
        <item> 67 kg </item>
        <item> 68 kg </item>
        <item> 69 kg </item>
        <item> 70 kg </item>
        <item> 71 kg </item>
        <item> 72 kg </item>
        <item> 73 kg </item>
        <item> 74 kg </item>
        <item> 75 kg </item>
        <item> 76 kg </item>
        <item> 77 kg </item>
        <item> 78 kg </item>
        <item> 79 kg </item>
        <item> 80 kg </item>
        <item> 81 kg </item>
        <item> 82 kg </item>
        <item> 83 kg </item>
        <item> 84 kg </item>
        <item> 85 kg </item>
        <item> 86 kg </item>
        <item> 87 kg </item>
        <item> 88 kg </item>
        <item> 89 kg </item>
        <item> 90 kg </item>
        <item> 91 kg </item>
        <item> 92 kg </item>
        <item>93 kg </item>
        <item> 94 kg </item>
        <item> 95 kg </item>
        <item> 96 kg </item>
        <item> 97 kg  </item>
        <item> 98 kg </item>
        <item> 99 kg </item>
        <item> 100 kg </item>
        <item> 101 kg </item>
        <item> 102 kg </item>
        <item> 103 kg </item>
        <item>  104 kg </item>
        <item>  105 kg </item>
        <item> 106 kg </item>
        <item> 107 kg </item>
        <item> 108 kg </item>
        <item> 109 kg </item>
        <item> 110 kg </item>
        <item>111 kg </item>
        <item> 112 kg </item>
        <item> 113 kg </item>
        <item> 114 kg </item>
        <item> 115 kg </item>
        <item> 116 kg </item>
        <item> 117 kg </item>
        <item> 118 kg </item>
        <item> 119 kg </item>
        <item> 120 kg </item>
        <item> 121 kg </item>
        <item> 122 kg </item>
        <item> 123 kg </item>
        <item> 124 kg </item>
        <item> 125 kg </item>
        <item> 126 kg </item>
        <item> 127 kg </item>
        <item> 128 kg </item>
        <item> 129 kg </item>
        <item> 130 kg </item>
        <item> 131 kg </item>
        <item> 132 kg </item>
        <item> 133 kg </item>
        <item> 134 kg </item>
        <item> 135 kg </item>
        <item> 136 kg </item>
        <item> 137 kg </item>
        <item> 138 kg </item>
        <item>  139 kg </item>
        <item> 140 kg </item>

    </string-array>
    <string name="searching_for">Searching For</string>
    <string name="groom">Groom</string>
    <string name="bride">Bride</string>
    <string name="personal_details">Personal Details</string>
    <string name="physical_details">Physical Details</string>
    <string name="location_details">Location Details</string>
    <string name="contact_details">Contact Details</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_email">Email / Mobile Number</string>
    <string name="whatsapp_number">Whatsapp Number</string>
    <string name="parents_number">Parent\'s Number</string>
    <string name="parents_whatsapp_number">Parent\'s Whatsapp Number</string>
    <string name="in_kg">in Kg</string>
    <string name="sub_caste">Sub Caste</string>
    <string name="annual_income">Annual Income</string>
    <string name="name_hint">Bride / Groom\'s Name</string>
    <string name="religion">Religion</string>
    <string name="mother_tongue">Mother Tongue</string>
    <string name="next">Next</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="i_have_password">I have a password</string>
    <string name="otp_by_sms">OTP by SMS</string>
    <string name="otp_hint">Enter OTP</string>
    <string name="changed_success">Changed Successfully!</string>
    <string name="password_changed_msg">Your Password has been changed successfully! Wait for a while, will redirect to the home page</string>
    <string name="save">Save</string>
    <string-array name="monthly_income">
        <item>Select Anual Income</item>
        <item>0 - 1 Lakh</item>
        <item>1 - 2 Lakh</item>
        <item>2 - 3 Lakh</item>
        <item>3 - 4 Lakh</item>
        <item>4 - 5 Lakh</item>
        <item>5 - 6 Lakh</item>
        <item>6 - 7 Lakh</item>
        <item>7 - 8 Lakh</item>
        <item>8 - 9 Lakh</item>
        <item>9 - 10 Lakh</item>
        <item>10 - 12 Lakh</item>
        <item>12 - 14 Lakh</item>
        <item>14 - 16 Lakh</item>
        <item>16 - 18 Lakh</item>
        <item>18 - 20 Lakh</item>
        <item>20 - 25 Lakh</item>
        <item>25 - 30 Lakh</item>
        <item>30 - 40 Lakh</item>
        <item>40 - 50 Lakh</item>
        <item>50 - 60 Lakh</item>
        <item>60 - 70 Lakh</item>
        <item>70 - 80 Lakh</item>
        <item>80 - 90 Lakh</item>

    </string-array>
    <string name="min_age">Min Age</string>
    <string name="max_age">Max Age</string>
    <string name="min_height">Min Height</string>
    <string name="max_height">Max Height</string>
    <string name="min_weight">Min Weight</string>
    <string name="max_weight">Max Weight</string>
    <string name="send">Send</string>
    <string name="unlimited">Unlimited</string>
    <string name="message_and_chat"><![CDATA[Message & Chat]]></string>
    <string name="access">Access</string>
    <string name="verified_mobile_number">Verified Mobile Number</string>
    <string name="view">View</string>
    <string name="horoscope">Horoscope</string>
    <string name="enhanced">Enhanced</string>
    <string name="profile_visibility">Profile Visibility</string>
    <string name="profile_highlighter">Profile Highlighter</string>
    <string name="get">Get</string>
    <string name="buy">Buy</string>
    <string name="settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_offers">My Offers</string>
    <string name="help_and_support">Help and Support</string>
    <string name="services">Services</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="membership_plan">Membership Plan</string>
</resources>