<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/home"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/nav_edit_profile"
        android:icon="@drawable/menu_profile"
        android:title="@string/edit_profile" />

    <item
        android:id="@+id/nav_membership_plan"
        android:icon="@drawable/membership_plan"

        android:title="@string/membership_plan" />


    <item
        android:id="@+id/nav_my_offers"
        android:icon="@drawable/offers"

        android:title="@string/my_offers" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/settings"

        android:title="@string/settings" />

    <item
        android:id="@+id/nav_help_support"
        android:icon="@drawable/help"

        android:title="@string/help_and_support" />

    <item
        android:id="@+id/nav_services"
        android:icon="@drawable/services"

        android:title="@string/services" />

    <item
        android:id="@+id/nav_refer"
        android:icon="@drawable/edit_profile_plus"

        android:title="@string/refer_and_earn" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout"

        android:title="@string/logout" />

</menu>
