<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_top_margin"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/input_field_height"
            android:paddingRight="@dimen/input_field_height"
            android:visibility="visible">

            <com.github.silvestrpredko.dotprogressbar.DotProgressBar
                android:id="@+id/pbDot"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:visibility="gone"
                custom:amount="5"
                custom:animationDirection="left"
                custom:duration="@android:integer/config_mediumAnimTime"
                custom:endColor="@color/light_blue_A400"
                custom:startColor="@color/light_blue_A700" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/login_top_margin"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rbPassword"
                        style="@style/LoginRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/i_have_password"
                        android:textColorHint="@color/red"
                        android:textColor="@color/pink"
                        android:textSize="@dimen/input_text_size" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rbOTP"
                        style="@style/LoginRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/otp_by_sms"
                        android:textColor="@color/pink"
                        android:textSize="@dimen/input_text_size" />

                </RadioGroup>

            </LinearLayout>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_field_height"
                android:background="@drawable/rounded_edittext_red"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="@dimen/small_padding"
                android:fontFamily="@font/opensansregular"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:padding="@dimen/medium_padding"
                android:textColor="@color/black"
                android:textColorHint="@color/medium_gray"
                android:textSize="@dimen/input_text_size" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvErrorMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/medium_text_size" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tvForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="@dimen/input_text_size" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_field_height"
                android:layout_marginTop="@dimen/input_field_height"
                android:background="@drawable/pink_rounded"
                android:fontFamily="@font/opensansregular"
                android:padding="@dimen/small_padding"
                android:paddingLeft="@dimen/input_field_height"
                android:paddingRight="@dimen/input_field_height"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_text_size" />

        </LinearLayout>

        <com.skyappz.namma.utils.SquareLinearLayout
            android:id="@+id/tvPasswordMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/input_field_height"
            android:background="@color/transparent_white"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/medium_padding"
            android:visibility="gone">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="@dimen/input_field_height"
                android:layout_height="@dimen/input_field_height"
                android:src="@drawable/thumbs_up" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_padding"
                android:fontFamily="@font/opensansregular"
                android:text="@string/changed_success"
                android:textColor="@color/white"
                android:textSize="@dimen/big_text_size" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/medium_padding"
                android:fontFamily="@font/opensansregular"
                android:gravity="center"
                android:text="@string/password_changed_msg"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_text_size" />

        </com.skyappz.namma.utils.SquareLinearLayout>

    </RelativeLayout>

</android.support.v4.widget.SwipeRefreshLayout>
